--- a/_posts/2023-11-13-roadmap.md
+++ b/_posts/2023-11-13-roadmap.md
@@ -13,7 +13,7 @@ Full house at the Innovative Smart Grid Technologies (ISGT) Europe panel session
 
 We are entering the next phase of innovating with AI, where AI-based tools may be deployed for the first time in distribution systems in scale, and their use cases are numerous. Together with Daniel Donaldson, P.E., Federica Bellizio, Pedro P. Vergara, Werner van Westering, I discussed the below roadmap of innovating with AI at the ISGT Europe, to speed up this phase, as the energy transition “calls” us to do so.
 
-![AI Distribution Grid](..\images\1699886229424.jpg) "AI generated control rom."
+![AI Distribution Grid](https://github.com/JochenC/JochenC.github.io/blob/master/images/1699886229424.jpg) "AI generated control rom."
 Image created by OpenAI's DALL·E (prompt: "Can you create an image showing "AI for distribution grids"?")
 
 
@@ -46,7 +46,7 @@ Jochen: "Werner, in these developments, where does it work and where does it not
 
 Werner: “The main principle of making collaboration pay off fast is to connect the academic researcher to the business team from the very start and keep them connected on a weekly basis. This way the academic will share knowledge from the start and produce more relevant research for the company.”
 
-![Roadmap](..\images\1699886706272.jpg) "Roadmap illustration.") Picture from [Publication](https://jochenc.github.io/publication/2024-01-01-ml-driven-advancements) 
+![Roadmap](https://github.com/JochenC/JochenC.github.io/blob/master/images/1699886706272.jpg) "Roadmap illustration.") Picture from [Publication](https://jochenc.github.io/publication/2024-01-01-ml-driven-advancements) 
 
 
 Then, Werner van Westering shared a new type of working on applied research questions directly bridging academia and industry. In a new type, @Alliander in the AI for Energy Grids Lab directly works with academics at TU Delft, Radboud University, University of Twente, and HAN University of Applied Sciences. There, the research becomes relevant, can be quickly implemented, and research pays off after a few months. However, this work model requires more supervision time, and may not be suited for all.
@@ -57,51 +57,6 @@ Daniel: “As Werner mentioned, regular interaction is key and collaboration wit
 
 Let's collaborate to shape the future of intelligent energy systems guided by this proposed roadmap for a decarbonized and resilient energy future. Thanks for attending (reading)! See you next time! #ISGTEurope #AI #energyfuture #collaboration
 
-![Panelists](..\images\1699886429051.jpg) "Panelists ISGT Europe 2023.")
+![Panelists](https://github.com/JochenC/JochenC.github.io/blob/master/images/1699886429051.jpg) "Panelists ISGT Europe 2023.")
 
 [This blog](https://www.linkedin.com/pulse/roadmap-innovating-ai-distribution-grids-jochen-cremer-zugme/) was a summary of the ISGT Europe 2023 panel session.
-
-
-
-
-
-
-
-
-
-
-
-![High Voltage](https://delta.tudelft.nl/wp-content/uploads/2023/12/Tennetcsm_Large_-_print-4802213435_9c9478f092.jpg "The increasing complexity may mean that power blackouts may affect entire regions.") (Photo: Tennet)
-
-Our power grids are having to cope with a lot. Almost everything will be connected to them: vehicles, solar panels, wind turbines etc. Large cables will bring electricity generated at sea to land. There will be more electricity exchange between countries. Everything must be done to align the volatility of the supply, caused by fluctuating weather conditions for example, and demand.
-
-The increasing complexity may mean that catastrophic power blackouts may paralyse entire regions. As everything is inter-connected, a power cut in one country may cause blackouts in other countries.
-
-But Electrical Engineer Jochen Cremer (Faculty of Electrical Engineering, Mathematics and Computer Science) is positive. He believes that the grid operators of the future will still know which buttons to press to avoid pan-European power cuts. But then they will have to work with artificial intelligence. 
-
-“The art will be to combine the physics and the most advanced AI,” says Cremer. 
-
-
-Self-learning algorithm
-======
-Cremer is working on self-learning algorithms which grid operators can fall back on should things start heating up. The idea is that the algorithms assess which routes power can be diverted to in potentially threatening situations. This month, Cremer was awarded a Veni grant of EUR 290,000 from the Dutch Research Council for his research entitled Physics-informed AI to avoid power blackouts in the energy transition.
-
- 
-This spring, nine TU Delft researchers were awarded Veni grants. Read more about them [here](https://www.tudelft.nl/en/2022/tu-delft/veni-grants-for-nine-leading-tu-delft-researchers).
-
-In the future, will we leave power grid regulation to computers?
-“No. Algorithms will only serve as a tool. The idea is that grid operators, such as the employees at Tennet in the Netherlands, continue to decide how the power is divided across their grids. They are trained in this and have plenty of experience. It usually goes well.”
-
-But not good enough?
-“Grid operators regularly test their grids for power disruptions. But, and this is the problem, they only check what happens with single disruptions. In the future, we may face multiple disruptions. We will then have so many power generators and so much equipment connected to the system that disruptions may occur in quick succession, like a waterfall, with one problem causing the next one.”
-
-And will it then be too complex for grid operators?
-“Should this happen they will need algorithms to help them assess how the system is behaving and what the remaining course of action is. Who knows, the system may say that the best thing to do is close a wind farm temporarily and switch to gas turbines to let the energy balance between countries stabilise.”
-
-What are the biggest challenges in designing the algorithms?
-“We know the laws of electrodynamics. The art is to combine the physics and the most advanced AI with network theory and variable factors such as weather patterns and even human behaviour. The algorithm can learn aspects such as that many people charge their cars at certain times of the day and how this may affect the grid. The logic that drives the advice of the self-learning algorithm must always be well understood at all times. AI must not become a black box.”
-
-Why would you not want a black box?
-“Because it should always be the grid operators who take the decisions. And they need to understand what they are dealing with. An additional advantage is that this can help us reduce the chance of cyber attacks. The grid operators must be able to see if the algorithms generate odd advice because they have been hacked. Vulnerability to cyber attacks is a whole topic in itself. And one that will become increasingly more important in the years to come. My colleagues and I are working on a completely different research project that is looking at this.”
-
-
